# issue-agent

./: .env.example  .env.prod.example  .gitignore  CICD_SETUP.md  DEPLOYMENT.md  Dockerfile.backend  LICENSE  LOCAL_RUNNER_SETUP.md  README.md  Style & Formatting Check.yml  controller.py  docker-compose.prod.yml  docker-compose.yml  email_sender.py  main.py  pyproject.toml  requirements.txt  result_processor.py  subscription_checker.py  temp.txt  uc_google.html
.github/: release-drafter.yml
.github/workflows/: build-and-push.yml  cd-local.yml  cd-local.yml.disabled  cd.yml  ci.yml  docker-linter.yml  release-drafter.yml  stale.yml
agents/: __init__.py  agent_template.py  apple_agent.py  asec_agent.py  base_agent.py  github_agent.py  google_agent.py  reddit_agent.py  selector_extractor.py  selector_extractor_backup_original.py  www.apple.com_agent.py
config/: settings.py
data/: domains.txt
frontend/: Dockerfile
frontend/webapp/: index.jsp
frontend/webapp/css/: style.css
models/: __init__.py  user_form.py
scripts/: deploy.sh  rollback.sh
tests/integration/: test_browser_use_startup.py  test_email_sender.py  test_result_processor.py
utils/: __init__.py  logger.py  retry.py
